fix: avoid bottom edge on Safari

--- a/public/vue/components/video-call/index.css
+++ b/public/vue/components/video-call/index.css
@@ -1,6 +1,5 @@
 .video-call {
   position: relative;
-  height: 100vh;
   background-color: var(--color-primary);
 }
 
