--- a/public/vue/main.css
+++ b/public/vue/main.css
@@ -22,6 +22,10 @@ html, body {
   box-sizing: border-box;
 }
 
+.h-100 {
+  height: 100%;
+}
+
 @media (min-width: 1280px) {
   .cursor-pointer {
     cursor: pointer;
